update .gitmodules fix permission denied error on git@github.com:Fokko/docker-superset.git

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/krisgeus/docker-kafka.git
 [submodule "superset"]
 	path = superset
-	url = git@github.com:Fokko/docker-superset.git
+	url = https://github.com/Fokko/docker-superset.git
