--- a/conf/divolte/divolte-collector.conf
+++ b/conf/divolte/divolte-collector.conf
@@ -233,8 +233,8 @@ divolte {
 
   mappings {
     my_mapping = {
-      schema_file = "/opt/divolte/divolte-collector-0.5.0/conf/DefaultEventRecord.avsc"
-      mapping_script_file = "/opt/divolte/divolte-collector-0.5.0/conf/mapping.groovy"
+      schema_file = "/opt/divolte/divolte-collector/conf/DefaultEventRecord.avsc"
+      mapping_script_file = "/opt/divolte/divolte-collector/conf/mapping.groovy"
       sources = [browser]
       sinks = [divolte]
     }
